--- a/new.css
+++ b/new.css
@@ -260,7 +260,7 @@ body{
         width: 85%;
         max-width: 100%;
         height: auto;
-        color: rgb(250, 250, 252);
+        color: green;
      }
 
      .header .nav-menu{
@@ -270,7 +270,7 @@ body{
      }
 
      .contact-container .contact-icon img{
-        background-color: green;
+        background-color: white;
         border-radius: 50px;
         width: 3.6%;
         height: 3.2%;
@@ -691,6 +691,7 @@ footer{
     margin: 20px;
 
 }
+
 
 
 
