--- a/new.css
+++ b/new.css
@@ -239,6 +239,10 @@ body{
 @media(max-width: 600px){
     body{
         width: 100%;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
     }
     .header{
          background-position: 0 73%;
@@ -690,6 +694,7 @@ footer{
     margin: 20px;
 
 }
+
 
 
 
