--- a/new.css
+++ b/new.css
@@ -134,7 +134,7 @@ body{
     height: 25px;
     padding: 5px;
     cursor: pointer;
-    margin: -47px 0px 15px 100px;
+    margin: -47px 0px 15px 250px;
 }
 
 .contact-container .contact-icon img:hover{
@@ -161,8 +161,7 @@ body{
 
 .firstlay [class$="-box"]{
     flex: 0 0 180px;
-    width: 100px;
-    margin-left: 8px;
+    width: 33.3%;
     height: 220px;
 }
 
@@ -287,7 +286,7 @@ body{
     .firstlay{
         width: 100%;
         margin-top: -2%;
-        box-sizing: border-box
+        box-sizing: border-box;
     }
 
     .firstlay [class$="-box"]{
@@ -692,6 +691,7 @@ footer{
     margin: 20px;
 
 }
+
 
 
 
